tests/baselines/reference/parserIndexMemberDeclaration7.errors.txt
==== tests/cases/compiler/parserIndexMemberDeclaration7.ts (1 errors) ====
    class C {
       public [x: string]: string;
       ~~~~~~
!!! parserIndexMemberDeclaration7.ts(2,4): error TS1055: Modifiers cannot appear here.
    }